--- a/Code/MMSolver/Project.toml
+++ b/Code/MMSolver/Project.toml
@@ -10,4 +10,5 @@ Einsum = "b7d42ee7-0b51-5a75-98ca-779d3107e4c0"
 GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
