--- a/Code/MMSolver/Project.toml
+++ b/Code/MMSolver/Project.toml
@@ -4,6 +4,7 @@ authors = ["msaba <matthias.saba@unifr.ch>"]
 version = "0.1.0"
 
 [deps]
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Einsum = "b7d42ee7-0b51-5a75-98ca-779d3107e4c0"
