--- a/Code/MMSolver/Project.toml
+++ b/Code/MMSolver/Project.toml
@@ -13,6 +13,7 @@ GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GSL = "92c85e6c-cbff-5e0c-80f7-495c94daaecd"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OpenLibm_jll = "05823500-19ac-5b8b-9628-191a04bc5112"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
